--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -101,6 +101,7 @@ Cognate with {{cog|sco|chose}}, {{m|sco|chese||to choose}}, {{cog|fr|choisir||to
 * Latin: {{t+|la|lego}}, {{t|la|dēligō}}
 * Latvian: {{t|lv|atlasīt}}
 * Lithuanian: {{t|lt|pasirinkti}}
+* Lombard: {{t|lmo|scernì}}
 * Macedonian: {{t|mk|и́збира|impf|sc=Cyrl}}
 * Malay: {{t|ms|pilih}}
 * Maltese: {{t|mt|għażel}}
