--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -279,7 +279,8 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Latvian: {{t+|lv|plūme|f}}
 * Lithuanian: {{t+|lt|slyva}}
 {{trans-mid}}
-* Livonian: {{t|liv|plūm }}, {{t|liv|plūmõz }}
+* Livonian: {{t|liv|plūm}}, {{t|liv|plūmõz}}
+* Lombard: {{t|lmo|brugna|f}}, {{t|lmo|brügna|f}}
 * Low German: {{t|nds|Pluum|f}}
 * Luxembourgish: {{t|lb|Promm|f}}, {{t|lb|Praum|f}}
 * Macedonian: {{t|mk|слива|f}}
