t+lb:[[Aascht]] ([[WT:EDIT|Assisted]]) <branch#62916911>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -126,6 +126,7 @@ Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà|
 * Latvian: {{t|lv|zars|m}}
 * Lithuanian: {{t+|lt|šaka|f}}
 * Low German: {{t|nds|Telg|m}}
+* Luxembourgish: {{t+|lb|Aascht}}
 * Macedonian: {{t|mk|гранка|n}}
 * Malay: {{t|ms|dahan}}
 * Maltese: {{t|mt|fergħa|f}}
