--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -137,6 +137,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * Georgian: {{t+|ka|საფრანგეთი}}
 * German: {{t+|de|Frankreich|n}}
 *: Alemannic German: {{t|gsw|Frankriich}}, {{t|gsw|Frankrych}}
+*: Central Franconian: {{t|gmw-cfr|Frankrich}} {{q|Ripuarian}}
 * Greek: {{t+|el|Γαλλία|f}}
 * Gujarati: {{t|gu|ફ્રાન્સ|sc=Gujr}}
 * Haitian Creole: {{t|ht|Frans}}
