--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -217,7 +217,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Plautdietsch: {{t|pdt|Moag|f}}
 * Polish: {{t+|pl|żołądek|m}}
 * Portuguese: {{t+|pt|estômago|m}}
-* Punjabi: {{t|pa|ਪੇਟ}}
+* Punjabi: {{t+|pa|ਢਿੱਡ}}
 * Rajasthani: {{t-needed|raj}}
 * Romanian: {{t+|ro|stomac|n}}
 * Rungus: {{t|drg|tizan}}
@@ -358,6 +358,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Old Turkic: {{t|otk|𐰴𐰺𐰣|ts=qarïn}}
 * Pashto: {{t+|ps|خېټه|f|tr=xéṭa}}
 * Persian: {{t+|fa|شکم|tr=šekam|sc=fa-Arab}}
+* Punjabi: {{t+|pa|ਢਿੱਡ}}
 * Pitjantjatjara: {{t|pjt|tjuni}}
 * Plautdietsch: {{t+|pdt|Buck|m}}
 * Polish: {{t+|pl|brzuch|m}}, {{t+|pl|żywot|m}} {{qualifier|outdated}}
