/* Translations */ <United States of America#62939848>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -111,7 +111,7 @@
 * Inupiaq: {{t|ik|United States of America}}, {{t|ik|Tannapta nunaŋat}}
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá}}, {{t+|ga|Meiriceá}}
 * Italian: {{t+|it|Stati Uniti d'America|m-p}}, {{t+|it|Stati Uniti|m-p}}, {{t|it|SUA}}
-* Japanese: {{t+|ja|アメリカ合衆国|tr=Amerika Gasshūkoku}}, {{t+|ja|米国|tr=Beikoku}}, {{t+|ja|米|alt=米-|tr=Bei-}}, {{t+|ja|アメリカ|tr=Amerika}}
+* Japanese: {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Amerika Gasshūkoku}}, {{t+|ja|合衆国|tr=がっしゅうこく, Gasshūkoku}}, {{t+|ja|米国|tr=べいこく, Beikoku}}, {{t+|ja|アメリカ|tr=Amerika}}, {{t+|ja|米|tr=べい, Bei}} {{qualifier|as a component}}
 * Kabardian: {{t|kbd|Америкэ Штат Зэгуэт}}
 * Kalmyk: {{t|xal|Америкин Ниицәтә Орн Нутгуд}}
 * Kannada: {{t|kn|ಅಮೇರಿಕ ಸಂಯುಕ್ತ ಸಂಸ್ಥಾನ}}
@@ -120,15 +120,15 @@
 * Khakas: {{t|kjh|Американың Піріккен Штаттары}}
 * Khmer: {{t+|km|សហរដ្ឋអាមេរិក}}, {{t|km|អាមេរិក}}
 * Komi-Permyak: {{t|koi|Америкаса Ӧтувтӧм Штатъяс}}
-* Korean: {{t+|ko|미국}} ({{t+|ko|美國}}), {{t|ko|미합중국}} ({{t|ko|美合衆國}}), {{t+|ko|아메리카 합중국}} ({{t|ko|아메리카 合衆國}}), {{t+|ko|아메리카}}, {{t|ko|[[미]]-}} ({{t+|ko|美}}) {{qualifier|as a component}}
+* Korean: {{t+|ko|^미국 (美國)}}, {{t|ko|^미합중국 (美合衆國)}}, {{t+|ko|^아메리카 합중국}} ({{t|ko|- [[合衆國]]}}), {{t+|ko|^아메리카}}, {{t|ko|^미 (美)}} {{qualifier|as a component}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|دەولەتێن یەکبوویییێن ئەمەریکایێ}}, {{t|ckb|وڵاتە یەکگرتووەکانی ئەمەریکا}}
 *: Northern Kurdish: {{t+|kmr|Dewletên Yekbûyî yên Amerîkayê}}, {{t+|kmr|Amerîka}}, {{t+|kmr|Emrîka}}
 * Kyrgyz: {{t+|ky|Америка Кошмо Штаттары}}, {{t+|ky|Америка}}
-{{trans-mid}}
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
 * Lao: {{t|lo|ສະຫະລັດອະເມລິກາ}}, {{t|lo|ອະເມລິກາ}}, {{t|lo|ອາເມລິກາ}}
 * Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
+{{trans-mid}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
 * Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}, {{t|lv|Amerika|f}}
 * Laz: {{t-needed|lzz}}
@@ -144,7 +144,8 @@
 *: Western Mari: {{t|mrj|Америкын Ушымы Штатвлӓжӹ}}
 * Mingrelian: {{t|xmf|ამერიკაშ აკოართაფილი შტატეფი}}
 * Moksha: {{t|mdf|Американь Аймакнень Соткссна}}
-* Mongolian: {{t+|mn|Америкийн Нэгдсэн Улс}}, {{t|mn|АНУ}}, {{t|mn|Америк}}
+* Mongolian:
+*: Cyrillic: {{t+|mn|Америкийн Нэгдсэн Улс}}, {{t|mn|АНУ}}, {{t|mn|Америк}}
 * Navajo: {{t|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}, {{t|nv|Kéyah ashdladiingo bił hahoodzooígíí}}
 * Nepali: {{t|ne|संयुक्त राज्य अमेरिका}}
 * Norman: {{t|nrf|Êtats Unnis d'Améthique|m-p}}
@@ -162,7 +163,9 @@
 * Plains Cree: {{t|crk|kihci-môhkomân-askîhk}}
 * Polish: {{t+|pl|Stany Zjednoczone Ameryki|m-in-p}}, {{t+|pl|USA|n|m-in-p}}, {{t+|pl|Ameryka|f}}
 * Portuguese: {{t+|pt|Estados Unidos da América|m-p}}, {{t+|pt|Estados Unidos|m-p}}, {{t+|pt|EUA}}
-* Punjabi: Eastern: {{t|pa|ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ}}Western: {{t|pa|ریاستہائے متحدہ امریکہ}}
+* Punjabi:
+*: Eastern: {{t|pa|ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ}}
+*: Western: {{t|pa|ریاستہائے متحدہ امریکہ}}
 * Quechua: {{t|qu|Hukllachasqa Amirika Suyukuna}}
 * Romanian: {{t+|ro|Statele Unite ale Americii|f-p}}, {{t+|ro|SUA}}, {{t|ro|Statele Unite|n-p}}, {{t+|ro|America|f}}
 * Romansch: {{t|rm|Stadis Unids da l'America|m}}
@@ -174,8 +177,8 @@
 * Scottish Gaelic: Na {{t|gd|Stàitean Aonaichte|f-p}}, Na {{t|gd|Stàitean Aonaichte na h-Aimeireaga|f-p}}
 * Seraiki: {{t|skr|امبریکا|tr=ambrīkā}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|Сједињене Америчке Државе|f-p}}, {{t|sh|Америка|f}}, {{t|sh|САД|f-p}}
-*: Roman: {{t+|sh|Sjedinjene Američke Države|f-p}}, {{t+|sh|Amerika}}, {{t|sh|SAD|f-p}}
+*: Cyrillic: {{t|sh|Сјѐдӣњене̄ Амѐричке̄ Др̀жаве|f-p}}, {{t|sh|Амѐрика|f}}, {{t|sh|САД|f-p}}
+*: Roman: {{t+|sh|Sjèdīnjenē Amèričkē Dr̀žave|f-p}}, {{t+|sh|Amèrika}}, {{t|sh|SAD|f-p}}
 * Sicilian: {{t|scn|Stati Uniti dâ Mèrica|m-p}}, {{t|scn|Stati Uniti|m-p}}, {{t+|scn|Mèrica|f-s}}
 * Silesian: {{t|szl|Stany Zjydnočůne Ameryki|m-p}}
 * Sindhi: {{t|sd|گڏيل آمريڪي رياستون}}, {{t|sd|يونائيٽيڊ سٽيٽس آف آميريڪا}}
