t+he:[[אמריקה]] t-balance ([[WT:EDIT|Assisted]]) <United States of America#62939858>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -100,7 +100,7 @@
 * Haryanvi: {{t|bgc|अ़मरेख्यासांजुक्ट्टराजये}}, {{t|bgc|सांजुक्ट्टराजये}}
 * Hausa: {{t|ha|Tarayyar Amurka}}
 * Hawaiian: {{t|haw|ʻAmelika Huipūʻia}}, {{t|haw|ʻAmelika Hui}}
-* Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}
+* Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}, {{t+|he|אָמֶרִיקָה|f|tr=amérika}}
 * Hiligaynon: {{t-needed|hil}}
 * Hindi: {{t|hi|संयुक्त राज्य अमरीका}}, {{t|hi|संयुक्त राष्ट्र अमरीका}}, {{t+|hi|अमेरिका|m}}, {{t+|hi|अमरीका|m}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}, {{t+|hu|Amerika}}
@@ -127,8 +127,8 @@
 * Kyrgyz: {{t+|ky|Америка Кошмо Штаттары}}, {{t+|ky|Америка}}
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
 * Lao: {{t|lo|ສະຫະລັດອະເມລິກາ}}, {{t|lo|ອະເມລິກາ}}, {{t|lo|ອາເມລິກາ}}
-* Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
 {{trans-mid}}
+* Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
 * Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}, {{t|lv|Amerika|f}}
 * Laz: {{t-needed|lzz}}
