--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -4,6 +4,9 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=64034|canj=ALBK|ids=⿰日央}}
 
+====Derived characters====
+* [[𦴤]]
+
 ====References====
 * {{Han ref|kx=0493.010|dkj=13838|dj=0856.010|hdz=21500.060|uh=6620|ud=26144|bh=AC4D|bd=44109}}
 
