t+ary:[[طوبة]] t+pga:[[tub]] ([[WT:EDIT|Assisted]]) <brick#62943286>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -82,6 +82,8 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 * Albanian: {{t+|sq|tullë|f}}
 * Amharic: {{t|am|ጡብ|sc=Ethi}}
 * Arabic: {{t|ar|طُوبَة|f}}, {{t|ar|لَبِنَة|f}}, {{t|ar|قَرْمِيد|m}}, {{t|ar|طَابُوق|m}}
+*: Juba Arabic: {{t|pga|tub}}
+*: Moroccan Arabic: {{t|ary|طوبة|tr=ṭūba}}
 * Aramaic:
 *: Classical Syriac: {{t|syc|ܠܒܬܐ|f|tr=ləḇettā}}
 *: Jewish Palestinian Aramaic: {{t|arc|לְבֵינְתָא|f|tr=ləḇênəṯā|sc=Hebr}}
