--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -246,6 +246,9 @@ Cognate with {{cog|sco|chose}}, {{m|sco|chese||to choose}}, {{cog|fr|choisir||to
 * Venetian: {{t|vec|deciđer}}, {{t|vec|desidar}}
 {{trans-bottom}}
 
+{{trans-top|to desire, to wish}}
+* Latin: {{t|la|volō}}
+
 {{checktrans-top}}
 * Albanian: {{t+check|sq|zgjedh}}
 * Esperanto: {{t-check|eo|elekti}}
