--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -26,7 +26,7 @@ Cognate with {{cog|sco|chose}}, {{m|sco|chese||to choose}}, {{cog|fr|choisir||to
 #: {{ux|en|He was '''chosen''' as president in 1990.}}
 # To [[decide]] to act in a certain way.
 #: {{ux|en|I '''chose''' to walk to work today.}}
-# To wish; to desire; to prefer.
+# To [[wish]]; to [[desire]]; to [[prefer]].
 #* '''2016''', Justin Deschamps:
 #*: {{ux|en|'''Choose''' truth, and find beauty. '''Choose''' love, and embrace change.}}
 #* {{RQ:Goldsmith Vicar}}
@@ -246,7 +246,7 @@ Cognate with {{cog|sco|chose}}, {{m|sco|chese||to choose}}, {{cog|fr|choisir||to
 * Venetian: {{t|vec|deciđer}}, {{t|vec|desidar}}
 {{trans-bottom}}
 
-{{trans-top|to desire, to wish}}
+{{trans-top|to prefer, to wish}}
 * Latin: {{t|la|volō}}
 {{trans-bottom}}
 
