--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -26,7 +26,7 @@ Cognate with {{cog|sco|chose}}, {{m|sco|chese||to choose}}, {{cog|fr|choisir||to
 #: {{ux|en|He was '''chosen''' as president in 1990.}}
 # To [[decide]] to act in a certain way.
 #: {{ux|en|I '''chose''' to walk to work today.}}
-# To [[wish]]; to [[desire]]; to [[prefer]].
+# To [[prefer]]; to [[wish]]; to [[desire]].
 #* '''2016''', Justin Deschamps:
 #*: {{ux|en|'''Choose''' truth, and find beauty. '''Choose''' love, and embrace change.}}
 #* {{RQ:Goldsmith Vicar}}
