/* Yola */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <felt#62969541>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -476,14 +476,8 @@ From {{inh|ang|gmw-pro|*felt}}.
 
 ----
 ==Yola==
- 
-===Etymology===
-From {{inh|yol|enm|fillen}}, from {{inh|yol|ang|fyllan}}, from {{inh|yol|gmw-pro|*fullijan}}. 
- 
+
 ===Verb===
 {{head|yol|verb}}
  
-# [[filled]]
- 
-===References===
-* {{R:Poole 1867}}
+# {{simple past tense|yol|staf}}
