--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -476,8 +476,14 @@ From {{inh|ang|gmw-pro|*felt}}.
 
 ----
 ==Yola==
-
+ 
+===Etymology===
+From {{inh|yol|enm|fillen}}, from {{inh|yol|ang|fyllan}}, from {{inh|yol|gmw-pro|*fullijan}}. 
+ 
 ===Verb===
 {{head|yol|verb}}
  
-# {{simple past tense|yol|staf}}
+# [[filled]]
+ 
+===References===
+* {{R:Poole 1867}}
