--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -82,6 +82,7 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Italian: {{qualifier|tortoise or turtle}} {{t+|it|tartaruga|f}}, {{t+|it|testuggine|f}}
 * Japanese: {{qualifier|tortoise or turtle}} {{t+|ja|亀|tr=かめ, kame|sc=Jpan}}, {{t+|ja|カメ|tr=kame|sc=Jpan}}, {{t+|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}
 * Kannada: {{t+|kn|ಆಮೆ|sc=Knda}}, {{t+|kn|ಕೂರ್ಮ|sc=Knda}}
+* Kashmiri: {{t+|ks|کٔچھوٕ}}
 * Kazakh: {{qualifier|tortoise or turtle}} {{t+|kk|тасбақа|sc=Cyrl}}
 * Khmer: {{t+|km|អណ្ដើក}} {{qualifier|tortoise or turtle}}
 * Kimaragang: {{t|kqr|landang}}
