--- a/en/惜/惜.15601.wikitext
+++ b/en/惜/惜.15601.wikitext
@@ -43,7 +43,9 @@ Meixian: xiag5 - vernacular; xid5 - literary
 ===Definitions===
 {{zh-hanzi}}
 
-# [[pity]]; [[regret]]
+# to be a [[pity]]; to [[regret]]
+#* {{zh-x|子 謂 ^顏 ^淵 曰：「惜 乎！吾 見 其 進 也，吾 未 見 其 止 也！」|Speaking of Yan Yuan['s death], the Master said, "'''The pity of it'''! I saw him go on, but I never saw him stop!"|ref=Lunyu}}
+#* {{zh-x|子 與 我 衣，我 活 也。我 與 子 衣，子 活 也。我，國士 也，為 天下 惜 死。子，不肖 人 也，不足 愛 也。子 與 我 子 之 衣。|If you give me your clothes, I will live. If I give you my clothes, you will live. I am a distinguished man of state, and it would '''be a pity''' if I died for the sake of the empire. As for you, you are an unworthy person and are not worth begrudging. You should give me your clothes.|ref=Lvshi Chunqiu}}
 # to [[cherish]]; to [[adore]]; to [[value]] [[greatly]]; to [[love]] [[dearly]]
 #: {{zh-x|我 阿哥 好 惜{sek3} 佢 個 女{neoi5-2} 㗎。|My elder brother '''loves''' his daughter dearly.|C}}
 #: {{zh-x|惜{sek3} 住 嚟 用||C}}
