--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -390,6 +390,7 @@ Much like with {{noncog|en|fish}}, this word is a collective noun, but can be pl
 ====Descendants====
 * {{desc|en|flesh}}
 * {{desc|sco|flesch}}
+* {{desc|yol|vleash|alts=1}}
 
 ====References====
 * {{R:MED Online|entry=flē̆sh |pos=n |id=MED16282 |accessdate=2018-04-08}}
