--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -174,6 +174,8 @@ From {{der|ko|ltc|-}} {{ltc-l|昆}}. {{hanja-hunmong|곤|kwon|天倫#상32A}}
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|reading=con, côn, gon|rs=日04}}
+{{vi-readings|rs=日04
+|hanviet=côn
+|reading=con, gon}}
 
-# {{rfdef|vi|sort=日04}}
+# {{Nom form of|con|[[child]]}}
