--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -38,7 +38,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 * Bulgarian: {{t|bg|Югосла́вия|f}}
 * Catalan: {{t|ca|Iugoslàvia|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|南斯拉夫|tr=Nánsīlāfū|sc=Hani}}
+*: Mandarin: {{t+|cmn|南斯拉夫|tr=Nánsīlāfū}}
 * Czech: {{t+|cs|Jugoslávie|f}}
 * Danish: {{t|da|Jugoslavien}}
 * Dutch: {{t+|nl|Joegoslavië|n}}
@@ -51,16 +51,16 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 * German: {{t+|de|Jugoslawien|n}}
 * Greek: {{t+|el|Γιουγκοσλαβία|f}}
 * Hawaiian: {{t|haw|Iugosolawia}}
-* Hebrew: {{t|he|יוגוסלביה}}
+* Hebrew: {{t|he|יוּגוֹסְלַבְיָה|f}}
 * Hindi: {{t|hi|यूगोस्लाविया}}
 * Hungarian: {{t+|hu|Jugoszlávia}}
 * Icelandic: {{t|is|Júgóslavía|f}}
 * Irish: {{t|ga|Iúgslaiv|f|alt=an Iúgslaiv}}
 * Italian: {{t|it|Jugoslavia}}, {{t+|it|Iugoslavia|f}}
 * Japanese: {{t|ja|ユーゴスラビア|tr=Yūgosurabia}}, {{t|ja|ユーゴスラヴィア|tr=Yūgosuravia}}
-* Kazakh: {{t|kk|Югославия|sc=Cyrl}}
+* Kazakh: {{t|kk|Югославия}}
 * Korean: {{t+|ko|^유고슬라비아}}
-* Kyrgyz: {{t+|ky|Югославия|sc=Cyrl}}
+* Kyrgyz: {{t+|ky|Югославия}}
 * Latvian: {{t|lv|Dienvidslāvija|f}}
 {{trans-mid}}
 * Lithuanian: {{t|lt|Jugoslavija|f}}
@@ -78,7 +78,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 * Romanian: {{t|ro|Iugoslavia|f}}
 * Russian: {{t+|ru|Югосла́вия|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|Југо̀сла̄вија|f|sc=Cyrl}}, {{t|sh|Југосла̏вија|f|sc=Cyrl}}
+*: Cyrillic: {{t|sh|Југо̀сла̄вија|f}}, {{t|sh|Југосла̏вија|f}}
 *: Latin: {{t+|sh|Jugòslāvija|f}}, {{t+|sh|Jugoslȁvija|f}}
 * Slovak: {{t|sk|Juhoslávia|f}}
 * Slovene: {{t+|sl|Jugoslávija|f}}
@@ -95,7 +95,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 * Ukrainian: {{t|uk|Югосла́вія|f}}, {{t|uk|Юґосла́вія|f}}
 * Uyghur: {{t|ug|يۇگوسلاۋىيە}}
 * Uzbek: {{t|uz|Yugoslaviya}}
-* Vietnamese: {{t+|vi|Nam Tư}} ({{t|vi|南斯|sc=Hani}})
+* Vietnamese: {{t+|vi|Nam Tư}} ({{t|vi|南斯}})
 * Welsh: {{t+|cy|Iwgoslafia}}
 {{trans-bottom}}
 
