--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -210,6 +210,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Spanish: {{t|es|verde oliva}}, {{t+|es|aceitunado|m}}
 * Swedish: {{t+|sv|oliv}}, {{t+|sv|olivgrönt}}
 * Turkish: {{t+|tr|zeytin}}
+* Ukrainian: {{t|uk|оли́вковий}}
 * Urdu: {{t|ur|[[زیتون]] [[رنگ]]|tr=zaitūn raṅg}}
 {{trans-bottom}}
 
