t+fa:[[نماک]] ([[WT:EDIT|Assisted]]) <icon#63037900>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -205,6 +205,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Norwegian:
 *: Bokmål: {{t+|nb|ikon|m|n}}
 *: Nynorsk: {{t|nn|ikon|m|n}}
+* Persian: {{t+|fa|نماک}}
 * Polish: {{t+|pl|ikona|f}}, {{t|pl|ikonka|f}}
 * Portuguese: {{t+|pt|ícone|m}}
 * Romanian: {{t+|ro|iconiță|f}}
