added nepali translation <count#63048593>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -115,6 +115,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Middle English: {{t|enm|counten}}
 * Mongolian: {{t+|mn|тоолох}}
 * Navajo: {{t|nv|ííníshtaʼ}}
+* Nepali: {{t|ne|गन्नु}}
 * North Frisian: {{qualifier|Mooring dialect}} {{t|frr|räägne}}
 * Northern Sami: {{t|se|lohkat}}
 * Norwegian:
