--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -289,6 +289,15 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 
 ----
 
+==Franco-Provençal==
+
+===Proper noun===
+{{head|frp|proper noun}}
+
+# {{place|frp|country|cont/Europe|t=France}}
+
+----
+
 ==French==
 
 ===Pronunciation===
