--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 {{root|en|ine-pro|*pent-}}
-From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gmw-pro|*finþan}}, from {{inh|en|gem-pro|*finþaną}} (compare {{cog|fy|fine}}, {{cog|nds|finden}}, {{cog|nl|vinden}}, {{cog|de|finden}}, {{cog|da|finde}}, {{cog|nb|finne}}, {{cog|nn|-}} and {{cog|sv|finna}}), a secondary verb from {{inh|en|ine-pro|*pent-||to go, pass; path bridge}}, {{m|ine-pro|*póntoh₁s}} (compare {{cog|en|path}}, {{cog|sga|étain||I find}}, {{m|sga|áitt||place}}, {{cog|la|pōns||bridge}}, {{cog|grc|πόντος||sea}}, {{cog|xcl|հուն||ford}}, {{cog|ae|𐬞𐬀𐬧𐬙𐬃}}, {{cog|sa|पथ|tr=pathá||path}}).
+From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gmw-pro|*finþan}}, from {{inh|en|gem-pro|*finþaną}} (compare {{cog|fy|fine}}, {{cog|nds|finden}}, {{cog|nl|vinden}}, {{cog|de|finden}}, {{cog|da|finde}}, {{cog|nb|finne}}, {{cog|nn|-}} and {{cog|sv|finna}}), a secondary verb from {{inh|en|ine-pro|*pent-||to go, pass; path bridge}}, {{m|ine-pro|*póntoh₁s}} (compare {{cog|en|path}}, {{cog|sga|étain||I find}}, {{m|sga|áitt||place}}, {{cog|la|pōns||bridge}}, {{cog|grc|πόντος||sea}}, {{cog|xcl|հուն||ford}}, {{cog|ae|𐬞𐬀𐬧𐬙𐬃}}, {{cog|sa|पथ|tr=pathá||path}}), {{cog|sla-pro|*pǫtь}}.
 
 ===Pronunciation===
 * {{enPR|fīnd}}, {{IPA|en|/faɪnd/}}
