/* Translations */  this one is a lot more common <New Zealand#63076812>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -113,7 +113,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 * Kashubian: {{t|csb|Nowô Zelandzkô|n}}
 * Kazakh: {{t|kk|Жаңа Зеландия|sc=Cyrl}}
 * Khakas: {{t|kjh|Наа Зеландия}}
-* Khmer: {{t|km|ញូហ្សេលែនដ៍}}
+* Khmer: {{t|km|នូវែលហ្សេឡង់}}, {{t|km|ញូហ្សេលែនដ៍}}
 * Kikuyu: {{t|ki|Nyuziland}}
 * Korean: {{t+|ko|^뉴질랜드}}
 * Kurdish:
