--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -36,10 +36,10 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Armenian: {{t+|hy|այսինքն}}
 * Bashkir: {{t|ba|йәғни|sc=Cyrl}}
 * Belarusian: {{t|be|гэ́та зна́чыць}}, {{t|be|г. зн.}}
-* Bulgarian: {{t|bg|т.е.|sc=Cyrl}}
+* Bulgarian: {{t|bg|т.е.}}
 * Catalan: {{t|ca|és a dir}}, {{t+|ca|això és}}
 * Chinese:
-*: Mandarin: {{t+|cmn|也就是|sc=Hani}}
+*: Mandarin: {{t+|cmn|也就是|tr=yějiùshì}}
 * Czech: {{t+|cs|tj.}}
 * Danish: {{t+|da|dvs.}}
 * Dutch: {{t+|nl|d.w.z.}}
@@ -51,25 +51,25 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Georgian: {{t|ka|ესე იგი}}, {{t|ka|ე.ი.}}
 * German: {{t+|de|d. i.}} (pl. {{t|de|d. s.}}), {{t+|de|d. h.}}
 * Greek: {{t+|el|δηλ.}}, {{t+|el|δηλαδή}}
-* Hebrew: {{t|he|היינו|tr=háinu}}, {{t+|he|כְּלוֹמַר|tr=klomár}}, {{t+|he|זאת אומרת|tr=zót oméret}}, {{t+|he|קְרִי|tr=qri}}
+* Hebrew: {{t|he|היינו|alt=היינו \ הָיְנוּ|tr=háy'nu}}, {{t+|he|כְּלוֹמַר|tr=klomár}}, {{t+|he|זאת אומרת|tr=zót oméret}}, {{t+|he|קְרִי|tr=qri}}
 * Hungarian: {{t+|hu|azaz}}, {{t+|hu|ill.}}
 * Icelandic: {{t+|is|þ.e.}} <!-- [[það]] [[er]] -->, {{t+|is|þ.e.a.s.}} <!-- [[það]] [[er]] [[að]] [[segja]] -->
 * Ido: {{t+|io|t.e.}}, {{t+|io|c.e.}}
 * Irish: {{t|ga|.i.}}<!-- {{qualifier|{{t|ga|eadhon}}}} -->
 * Italian: {{t+|it|cioè}}
 {{trans-mid}}
-* Japanese: {{t+|ja|すなわち|tr=sunawachi|sc=Jpan}}, {{t+|ja|つまり|tr=tsumari}}
+* Japanese: {{t+|ja|すなわち|tr=sunawachi}}, {{t+|ja|つまり|tr=tsumari}}
 * Korean: {{t+|ko|즉}}
 * Latin: {{t|la|i. e.}}, {{t|la|sc.}}, {{t|la|h. e.}} (hoc est)
 * Lithuanian: {{t|lt|t.y.}} {{qualifier|initialism}}
 * Macedonian: {{t+|mk|т.е.}}, {{t|mk|то ест}}
 * Malay: {{t|ms|iaitu}}, {{t|ms|yakni}}
-* Malayalam: {{t|ml|അതായത്|sc=Mlym}}
+* Malayalam: {{t|ml|അതായത്}}
 * Norwegian:
 *: Bokmål: {{t+|nb|dvs.}}
 *: Nynorsk: {{t|nn|d.e.}}, {{t|nn|dvs.}}
 * Old Irish: {{t|sga|.i.}}
-* Persian: {{t+|fa|یعنی|tr=ya'ni|sc=fa-Arab}}
+* Persian: {{t+|fa|یعنی|tr=ya'ni}}
 * Polish: {{t+|pl|tzn.}}, {{t+|pl|tj.}}, {{t+|pl|czyli}}
 * Portuguese: {{t+|pt|isto é}}, {{t+|pt|ou seja}}
 * Russian: {{t+|ru|т. е.}}, {{t+|ru|то́ есть|sc=Cyrl}}
@@ -80,8 +80,8 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Spanish: {{t+|es|es decir}}, {{t|es|a saber}}, {{t+|es|o sea}}, {{t|es|esto es}}
 * Swedish: {{t+|sv|dvs}}, {{t+|sv|d v s}}, {{t+|sv|d.v.s.}}
 * Turkish: {{t+|tr|yani}}
-* Ukrainian: {{t+|uk|то́бто|sc=Cyrl}}
-* Urdu: {{t+|ur|یعنی|sc=ur-Arab}}
+* Ukrainian: {{t+|uk|то́бто}}
+* Urdu: {{t+|ur|یعنی|tr=yā'nī}}
 {{trans-bottom}}
 
 ===Anagrams===
