--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -34,12 +34,13 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Afrikaans: {{t+|af|d.w.s.}}
 * Arabic: {{t+|ar|أَيْ}}, {{t|ar|يَعْنِي}}
 * Armenian: {{t+|hy|այսինքն}}
+* Azerbaijani: {{t+|az|yəni}}
 * Bashkir: {{t|ba|йәғни|sc=Cyrl}}
 * Belarusian: {{t|be|гэ́та зна́чыць}}, {{t|be|г. зн.}}
-* Bulgarian: {{t|bg|т.е.}}
+* Bulgarian: {{t|bg|т.е.}}, {{t+|bg|то́ест}}
 * Catalan: {{t|ca|és a dir}}, {{t+|ca|això és}}
 * Chinese:
-*: Mandarin: {{t+|cmn|也就是|tr=yějiùshì}}
+*: Mandarin: {{t+|cmn|也就是|tr=yějiùshì}}, {{t+|cmn|就是|tr=jiùshì}}, {{t+|cmn|即|tr=jí}}
 * Czech: {{t+|cs|tj.}}
 * Danish: {{t+|da|dvs.}}
 * Dutch: {{t+|nl|d.w.z.}}
@@ -52,12 +53,13 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * German: {{t+|de|d. i.}} (pl. {{t|de|d. s.}}), {{t+|de|d. h.}}
 * Greek: {{t+|el|δηλ.}}, {{t+|el|δηλαδή}}
 * Hebrew: {{t|he|היינו|alt=היינו \ הָיְנוּ|tr=háy'nu}}, {{t+|he|כְּלוֹמַר|tr=klomár}}, {{t+|he|זאת אומרת|tr=zót oméret}}, {{t+|he|קְרִי|tr=qri}}
+* Hindi: {{t+|hi|अर्थात}}, {{t+|hi|यानी}}
 * Hungarian: {{t+|hu|azaz}}, {{t+|hu|ill.}}
 * Icelandic: {{t+|is|þ.e.}} <!-- [[það]] [[er]] -->, {{t+|is|þ.e.a.s.}} <!-- [[það]] [[er]] [[að]] [[segja]] -->
 * Ido: {{t+|io|t.e.}}, {{t+|io|c.e.}}
 * Irish: {{t|ga|.i.}}<!-- {{qualifier|{{t|ga|eadhon}}}} -->
-* Italian: {{t+|it|cioè}}
 {{trans-mid}}
+* Italian: {{t+|it|cioè}}
 * Japanese: {{t+|ja|すなわち|tr=sunawachi}}, {{t+|ja|つまり|tr=tsumari}}
 * Korean: {{t+|ko|즉}}
 * Latin: {{t|la|i. e.}}, {{t|la|sc.}}, {{t|la|h. e.}} (hoc est)
@@ -79,9 +81,11 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Slovak: {{t|sk|čiže}}, {{t|sk|tzn.}}, {{t|sk|teda}}
 * Spanish: {{t+|es|es decir}}, {{t|es|a saber}}, {{t+|es|o sea}}, {{t|es|esto es}}
 * Swedish: {{t+|sv|dvs}}, {{t+|sv|d v s}}, {{t+|sv|d.v.s.}}
+* Tajik: {{t+|tg|яъне}}
 * Turkish: {{t+|tr|yani}}
 * Ukrainian: {{t+|uk|то́бто}}
 * Urdu: {{t+|ur|یعنی|tr=yā'nī}}
+* Uzbek: {{t+|uz|yani}}
 {{trans-bottom}}
 
 ===Anagrams===
