t+rm:[[tschiffar]] ([[WT:EDIT|Assisted]]) <catch#63122618>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -376,6 +376,7 @@ See combined section below.
 * Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}, {{t+|pt|apanhar}}
 * Quechua: {{t|qu|jap'iy}}
 * Romanian: {{t+|ro|prinde}}
+* Romansch: {{t|rm|tschiffar}}
 * Russian: {{t+|ru|лови́ть|impf}}, {{t+|ru|пойма́ть|pf}}
 * Sardinian:
 *: Campidanese: {{t|sc|aggaffài}}
