--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -130,7 +130,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 {{trans-bottom}}
 
 ====Verb====
-[[File:Comic History of Rome p 308 The End of Julius Caesar.jpg|thumb|a man about to be stabbed]]
+[[File:Comic History of Rome p 308 The End of Julius Caesar.jpg|thumb|A man about to be stabbed.]]
 {{en-verb}}
 
 # {{lb|en|transitive}} To [[pierce]] or to [[wound]] (somebody) with a [[pointed]] [[tool]] or [[weapon]], especially a [[knife]] or [[dagger]].
