--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -129,6 +129,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 *: Egyptian Arabic: {{t|arz|كلم|tr=kallim}}
 *: Moroccan Arabic: {{t|ary|هدر|tr=hdar}},  {{t|ary|تكلم|tr=tkallem}}, {{t|ary|دوى|tr=dwa}}
 *: North Levantine Arabic: {{t|apc|حكى|tr=ḥaka}}
+* Aragonese: {{t+|an|fablar}}
 * Armenian: {{t+|hy|խոսել}}
 * Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
 * Assamese: {{t|as|কথা কোৱা}}, {{t|as|কোৱা}}
