--- a/en/垈/垈.13067.wikitext
+++ b/en/垈/垈.13067.wikitext
@@ -37,7 +37,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
 
-# {{rfdef|ja|sort=土05}}
+# [[swamp]], [[wetlands]]; (ghost character)
 
 ====Readings====
 * {{ja-readings|on=[[たい]] (tai)|kun=[[ぬた]] (nuta), [[ぬま]] (numa)}}
