t+sv:[[fruktkött]] ([[WT:EDIT|Assisted]]) <flesh#63157121>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -246,6 +246,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * Scottish Gaelic: {{t|gd|feòil|f}}
 * Spanish: {{t+|es|carne|f}}
 * Swahili: {{t+|sw|ngozi}}
+* Swedish: {{t+|sv|fruktkött|n}}
 * Telugu: {{t+|te|గుజ్జు}}
 * Volapük: {{t|vo|flukapulp}}, {{t|vo|pulp}}
 {{trans-bottom}}
