--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -124,7 +124,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, {{t+|sv|blond}}
 * Tagalog: {{t|tl|rubyo}}
 * Thai: {{t-needed|th}}
-* Turkish: {{t|tr|kımbıl}}
+* Turkish: {{t|tr|kımbıl}}, {{t+|tr|sarışın}}
 * Vietnamese: {{t-needed|vi}}
 * Volapük: {{t+|vo|blonik}}, {{t|vo|blönik}} {{qualifier|obsolete}}
 * Welsh: {{t+|cy|penfelyn}}
