--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -292,7 +292,7 @@ From {{inh|nl|dum|blont}}, from {{der|nl|fro|blond}}, {{der|nl|ML.|blondus}}, fr
 ==French==
 
 ===Etymology===
-{{inh|fr|ML.|blondus}}, of {{der|fr|gem}} origin: probably from {{bor|fr|frk|*blund||a mixed color between golden and light-brown}}, from {{der|fr|gem-pro|*blundaz||mixed, blinding}}. Compare {{cog|it|biondo}}, {{cog|oc|blon}}.
+{{inh|fr|ML.|blondus}}, of {{der|fr|gem}} origin: probably from {{bor|fr|frk|*blund||a mixed color between golden and light-brown}}, from {{der|fr|gem-pro|*blundaz||mixed, blinding}}, ultimately from {{der|fr|ine-pro|*bʰlendʰ-}}. Compare {{cog|it|biondo}}, {{cog|oc|blon}}.
 
 ===Pronunciation===
 * {{fr-IPA}}
