[[wikt:User:Suzukaze-c/AjaxEdit.js|Æ]] /* 2.2 Pronunciation */ <愚#63171544>

--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -22,20 +22,20 @@
 ===Pronunciation===
 {{zh-pron
 |m=yú
-|m-s=
+|m-s=yu2
 |c=jyu4
 |c-t=
 |g=
-|h=pfs=ngì
-|j=
+|h=pfs=ngì;gd=ngi2
+|j=y1
 |mb=ngṳ̄
 |md=ngṳ̀/kṳ̀
 |md_note=ngṳ̀ - literary; kṳ̀ - vernacular
-|mn=qz,tw,xm:gû/zz:gî
+|mn=xm,qz,jj,tw:gû/zz:gî
 |mn-t=ngo5/ngu5
 |mn-t_note=ngu5 - Chaoyang
 |w=3nyy
-|x=
+|x=y2
 |mc=y
 |oc=y
 |ma=y
