--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -346,8 +346,9 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #* '''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter V
 #*: As Blunt had said, the burning ship lay a good twelve miles from the Malabar, and the '''pull''' was a long and a weary one. Once fairly away from the protecting sides of the vessel that had borne them thus far on their dismal journey, the adventurers seemed to have come into a new atmosphere.
 # {{lb|en|dated}} A [[contest]]; a [[struggle]].
-#: va wrestling '''pull'''}}
-#: {{rfquotek|en|Carew}}
+#: {{ux|en|a wrestling '''pull'''}}
+#* {{RQ:Carew Survey of Cornwall}}
+#*: this wrastling '''pull''' betweene Corineus and Gogmagog, is reported to have befallen at Douer.
 # {{lb|en|obsolete|poetic}} Loss or violence suffered.
 #* {{RQ:Shakespeare Henry 6-2|II|iii|passage=Two '''pulls''' at once; / His lady banished, and a limb lopped off.}}
 # {{lb|en|colloquial}} The act of drinking; a [[mouthful]] or [[swig]] of a drink.
