t+ta:[[{{t-needed}}]] t+kn:[[{{t-needed}}]] t+te:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <plum#63191459>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -270,6 +270,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Irish: {{t|ga|pluma|m}}
 * Italian: {{t+|it|prugna|f}}, {{t+|it|susina|f}}
 * Japanese: {{t+|ja|セイヨウスモモ|tr=seiyōsumomo}}, {{t+|ja|プラム|tr=puramu}}
+* Kannada: {{t-needed|kn}}
 * Kazakh: {{t|kk|алхоры}}, {{t|kk|қараөрік}}
 * Khmer: {{t|km|ម៉ាក់ប្រាង|tr=makpraang|sc=Khmr}}
 * Korean: {{t+|ko|자두}}, {{t|ko|서양자두}}, {{t|ko|오얏}}
@@ -279,10 +280,10 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Latin: {{t|la|prūnum|n}}
 * Latvian: {{t+|lv|plūme|f}}
 * Lithuanian: {{t+|lt|slyva}}
-{{trans-mid}}
 * Livonian: {{t|liv|plūm}}, {{t|liv|plūmõz}}
 * Lombard: {{t|lmo|brugna|f}}, {{t|lmo|brügna|f}}
 * Low German: {{t|nds|Pluum|f}}
+{{trans-mid}}
 * Luxembourgish: {{t|lb|Promm|f}}, {{t|lb|Praum|f}}
 * Macedonian: {{t|mk|слива|f}}
 * Malagasy: {{t|mg|pesombazaha}}
@@ -327,7 +328,9 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Swahili: {{t+|sw|mzambarau}}
 * Swedish: {{t+|sv|plommon|n}}
 * Tagalog: {{t|tl|sirwelas}}
+* Tamil: {{t-needed|ta}}
 * Taos: {{t|twf|pùlulúna}}
+* Telugu: {{t-needed|te}}
 * Thai: {{t|th|พลัม}}, {{t|th|พรุน}}
 * Tibetan: {{t|bo|ཤིང་ཏོག་པ་ལམ}}
 * Tigrinya: {{t|ti|በርቁቕ}}, {{t|ti|ፕሩኞ}}
