t+vec:[[tonàre]] ([[WT:EDIT|Assisted]]) <thunder#63201966>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -390,6 +390,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Swedish: {{t+|sv|dundra}}, {{t+|sv|dåna}}, {{t+|sv|åska}}
 * Thai: {{t|th|สายฟ้าฟาด|tr=săaifáa fâat}}
 * Tibetan: {{t|bo|འབྲུག་སྐད་རྒྱག}}
+* Venetian: {{t|vec|tonàre}}
 * Welsh: {{t+|cy|taranu}}
 * West Frisian: {{t|fy|daverje}}
 * Westrobothnian: {{t|gmq-bot|toor}}
