--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -71,16 +71,20 @@ From {{inh|fr|fro|chose}}, from {{inh|fr|la|causa}}. Compare {{cog|it|cosa}}, {{
 |autre chose
 |avant toutes choses
 |c'est la moindre des choses
+|chose du passé
 |chose jugée
 |chose promise, chose due
 |chosisme
 |chosiste
 |de deux choses l'une
 |faire la part des choses
+|par la force des choses
+|passer aux choses sérieuses
 |plus ça change, plus c'est la même chose
 |prendre les chose comme elles viennent
 |quelque chose
 |tout chose
+|voir les choses en grand
 }}
 
 ===Further reading===
