--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -205,7 +205,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|rědny}}
 * Southern Thai: {{t-needed|sou}}
-* Spanish: {{t+|es|hermoso|m}}, {{t+|es|hermosa|f}}, {{t+|es|bello|m}}, {{t+|es|bella|f}} [[lindo]], {{t+|es|linda|f}}, {{t+|es|guapo|m}}, {{t+|es|guapa|f}}, {{t+|es|bonito|m}}, {{t+|es|bonita|f}}
+* Spanish: {{t+|es|hermoso|m}}, {{t+|es|hermosa|f}}, {{t+|es|bello|m}}, {{t+|es|bella|f}}, {{t+|es|lindo|m}}, {{t+|es|linda|f}}, {{t+|es|guapo|m}}, {{t+|es|guapa|f}}, {{t+|es|bonito|m}}, {{t+|es|bonita|f}}
 * Sudovian: {{t|xsv|grazi}}, {{t|xsv|skaista|f}}
 * Swahili: {{t+|sw|zuri}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
