--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -25,7 +25,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 #: {{ux|en|That man is an '''icon''' in the business; he personifies loyalty and good business sense.}}
 # {{lb|en|graphical user interface}} A small picture that represents something.
 #: ''Click the loudspeaker '''icon''' to configure audio settings.''
-# {{lb|en|linguistics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.
+# {{lb|en|linguistics|semiotics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.
 #: {{cot|en|symbol|index}}.
 
 ====Derived terms====
