--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -24,6 +24,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 #: {{syn|en|Thesaurus:exemplar|Thesaurus:model}}
 #: {{ux|en|That man is an '''icon''' in the business; he personifies loyalty and good business sense.}}
 #* {{quote-journal|en|author=Robert Palmer|title=Two Icons of Rock Music|work=The New York Times|date=1981-05-31|url=https://www.nytimes.com/1981/05/31/arts/two-icons-of-rock-music.html|issn=0362-4331|passage=Only a handful of rock musicians have become genuine '''icons''' - larger-than-life symbolic figures whose personal triumphs and vicissitudes seem to mirror the ups and downs of rock as a whole, and sometimes of the society that nurtures it. Often, rock '''icons''' become the objects of personality cults that tend to overshadow their musical accomplishments.}}
+#* {{quote-journal|en|title=Barbie: Doll, Icon Or Sexist Symbol?|work=The New York Times|date=1987-12-23|url=https://www.nytimes.com/1987/12/23/garden/barbie-doll-icon-or-sexist-symbol.html|issn=0362-4331|passage=Barbie is viewed as an '''icon''' of American culture in her new biography, ''Barbie: Her Life and Times'' (Crown, $25), written by Billy Boy, a clothing and jewelry designer in Paris.}}
 # {{lb|en|graphical user interface}} A small picture that represents something.
 #: {{ux|en|Click the loudspeaker '''icon''' to configure audio settings.}}
 # {{lb|en|linguistics|semiotics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.
