--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -28,6 +28,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 #* {{quote-journal|en|title=Barbie: Doll, Icon Or Sexist Symbol?|work=The New York Times|date=1987-12-23|url=https://www.nytimes.com/1987/12/23/garden/barbie-doll-icon-or-sexist-symbol.html|issn=0362-4331|passage=Barbie is viewed as an '''icon''' of American culture in her new biography, ''Barbie: Her Life and Times'' (Crown, $25), written by Billy Boy, a clothing and jewelry designer in Paris.}}
 # {{lb|en|graphical user interface}} A small picture that represents something.
 #: {{ux|en|Click the loudspeaker '''icon''' to configure audio settings.}}
+#* {{quote-journal|en|author=Erik Snadberg-Diment|title=Number Crunching on the Macintosh|work=The New York Times|date=1985-09-15|url=https://www.nytimes.com/1985/09/15/business/the-executive-computer-number-crunching-on-the-macintosh.html|issn=0362-4331|passage=The program's most quintessentially Macintoshian feature, one as yet unique among spreadsheets, is its '''icon''' bar, which resides at the top of the screen just below the standard menu bar. It contains 21 '''icons''', each of which allows the user to perform a specified function with but a few clicks of the mouse.}}
 # {{lb|en|linguistics|semiotics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.
 #: {{cot|en|symbol|index}}.
 
