--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -47,7 +47,7 @@ Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà|
 # {{lb|en|rail transport}} A [[branch line]].
 
 ====Synonyms====
-* {{sense|part of a tree}} {{l|en|bough}}, {{l|en|limb}}, {{l|en|tillow}}, {{l|en|twig}}; ''see also'' [[Thesaurus:tree]]
+* {{sense|part of a tree}} {{l|en|bough}}, {{l|en|limb}}, {{l|en|tiller}}, {{l|en|tillow}}, {{l|en|twig}}; ''see also'' [[Thesaurus:tree]]
 
 ====Derived terms====
 {{der3|en
