--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -7,9 +7,9 @@
 ===Etymology===
 [[File:Acacia constricta branch.jpg|thumb|Tree branches]]
 {{dercat|en|cel}}
-From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed from {{der|en|fro|branche}}, {{m|fro|brance}}, from {{der|en|LL.|branca||footprint”, later also “paw, claw}}, of unknown origin, possibly from {{der|en|cel-gau|*vranca}}, from {{der|en|ine-pro||*wrónk-eh₂}}.<ref>{{R:American_Heritage_Dictionary|branch}}</ref> 
+From {{inh|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, from {{der|en|fro|branche}}, {{m|fro|branke}}, from {{der|en|LL.|branca||footprint”, later also “paw, claw}} (whence {{cog|gmh|pranke}}, {{cog|de|Pranke|t=paw}}), of {{unk|en|title=unknown}} origin. 
 
-Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà||hand}}, {{cog|cu|рѫка||hand}}, {{cog|sq|rangë||yardwork}}.
+Perhaps of {{etyl|cel|-}} origin, from a hypothetical {{der|en|cel-gau|*vranca}}, from {{der|en|ine-pro||*wrónk-eh₂}}.<ref>{{R:American_Heritage_Dictionary|branch}}</ref> If so, then Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà||hand}}, {{cog|cu|рѫка||hand}}, {{cog|sq|rangë||yardwork}}.
 
 ===Pronunciation===
 * {{a|RP}} {{enPR|bränch}}, {{IPA|en|/bɹɑːntʃ/}}
