--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -11,7 +11,7 @@ From {{inh|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, from {{der|e
 
 Perhaps of {{etyl|cel|-}} origin, from a hypothetical {{der|en|cel-gau|*vranca}}, from {{der|en|ine-pro||*wrónk-eh₂}}.<ref>{{R:American_Heritage_Dictionary|branch}}</ref> If so, then Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà||hand}}, {{cog|cu|рѫка||hand}}, {{cog|sq|rangë||yardwork}}.
 
-The verb is from {{inh|en|enm|braunchen}}, {{m|enm|branchen}}, from the noun.
+The verb is from {{inh|en|enm|braunchen}}, from the noun.
 
 ===Pronunciation===
 * {{a|RP}} {{enPR|bränch}}, {{IPA|en|/bɹɑːntʃ/}}
