--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -170,12 +170,14 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|līber||free}}, from {{der|fr|i
 |libre comme l'air
 |libre-échange
 |libre-examen
+|libre marché
 |libre-service
 |licence libre
 |logiciel libre
 |morphème libre
 |nage libre
 |papier libre
+|radical libre
 |temps libre
 |vers libre
 }}
