/* Derived terms */ <bridge#63346170>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -81,6 +81,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Bamber Bridge
 |Blythe Bridge
 |bowstring bridge
+|[[Bridge End]], [[Bridgend]]
 |bridge loan
 |bridge mount
 |Bridge of Allan
