--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -195,6 +195,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Kyrgyz: {{t+|ky|Германия}}
 * Ladin: {{t-needed|lld}}
 * Ladino: {{t|lad|Almania|f}}
+* Lakota: {{t|lkt|Iyášiča Makȟóčhe|lit=land of bad speakers}}
 * Lao: {{t|lo|ເຢັຽລະມັນ}}, {{t|lo|ເຢຍຣະມັນ}}, {{t|lo|ເຢັຍຣະມັນ}}
 * Latgalian: {{t|ltg|Vuoceja|f}}
 * Latin: {{t+|la|Germania|f}}, {{t|la|Alemānnia|f}}
