/* English */ wiki > lite <Yugoslavia#63428655>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -1,5 +1,4 @@
 ==English==
-{{wikipedia}}
 
 ===Alternative forms===
 * {{alter|en|Jugoslavia||common pre-WWII spelling}}
@@ -109,6 +108,9 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 * Welsh: {{t+|cy|Iwgoslafia}}
 * Yiddish: {{t|yi|יוגאָסלאַוויע}}
 {{trans-bottom}}
+
+====Further reading====
+* {{pedialite}}
 
 ===See also===
 * [[Appendix:Countries of the world]]
