--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -152,7 +152,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 *: Cyrillic: {{t|cu|вѣтвь|f}}
 * Old English: {{t|ang|bōg|m}}, {{t+|ang|twiġ|n}}
 * Old Tupi: {{t|tpw|akã}}
-* Oriya: {{t+|or|ଶାଖା}}, {{t+|or|ଡାଳ}}
+* Oriya: {{t|or|ଡାଳ}}, {{t|or|ଶାଖା}}
 * Oroch: {{t|oac|га̄}}
 * Orok: {{t|oaa|гара}}
 * Pashto: {{t|ps|خراتګه|f|tr=xarãtga}}, {{t|ps|شاخ|m|tr=šāx}}
