--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -21,7 +21,7 @@ From {{inh|en|enm|ich}}, from {{inh|en|ang|iċ}}, {{m|ang|iċċ|t=I|pos=pronoun}
 #* {{quote-book|en|year=1529|author=John Skelton|title=Elynour Rummyng|passage="Behold," she sayd, "and se How bright I am of ble! '''Ich''' am not cast away, That can my husband say, [...]"}}
 #* {{quote-book|en|year=1561|author=John Awdelay|title=The fraternitye of vacabondes|passage=My maysters, '''ich''' am an old man, and halfe blinde, {{...}}}}
 #* {{quote-book|en|year=1568|author=Thomas Howell|title=Arbor of Amitie|passage=With cap and knee, '''ich''' will serve thee, what should '''ich''' more declare.}}
-#* {{quote-book|en|year=1604|author=William Shakespeare|title=Measure for Measure|passage=Kissyng and lying '''ich''' see is all one:<br/>And '''ch'''ave no mony, '''ch'''ul tell true therfore.}}
+#* {{quote-book|en|year=1578|author=George Whetstone|title=The right, excellent and famous Historye of Promos and Cassandra|passage=Kissyng and lying '''ich''' see is all one:<br/>And '''ch'''ave no mony, '''ch'''ul tell true therfore.}}
 #* {{quote-book|en|year=1645|author=Thomas Davies|title=The Somersetshire Man's Complaint|passage=Dost thinke ''''ch'''ill labor to be poore, No no, '''ich''' haue a-doe..'''Ich''' will a plundering too.}}
 #* {{RQ:New World of English Words|edition=6th|column=2|page=355|passage='''Ich''', a Word us'd for ''I'' in the Weſtern Parts of ''England''.|brackets=on}}
 
