Added 45 additional derived characters <是#63458191>

--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -8,7 +8,8 @@
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60801|canj=AMYO|ids=⿱日𤴓}}
 
 ====Derived characters====
-* {{l|mul|[[匙]], [[堤]], [[提]], [[湜]], [[題]], [[尟]]}}
+* {{l|mul|[[偍]], [[㔭]], [[㖷]], [[堤]], [[媞]], [[崼]], [[徥]], [[惿]], [[提]], [[湜]], [[隄]], [[遈]], [[㮛]], [[煶]], [[瑅]], [[禔]], [[䐎]], [[睼]], [[碮]], [[䅠]], [[褆]], [[䊓]], [[緹]]([[缇]]), [[蝭]], [[䚣]], [[諟]]([[𬤊]]), [[䜻]], [[趧]], [[踶]], [[醍]], [[鍉]], [[鞮]], [[䪘]], [[騠]]([[𫘨]]), [[鯷]]([[鳀]])}}
+* {{l|mul|[[㓳]], [[匙]], [[尟]], [[㼵]], [[韙]]([[韪]]), [[題]]([[题]]), [[鶗]], [[寔]], [[䈕]], [[翨]]}}
 
 ====References====
 * {{Han ref|kx=0493.260|dkj=13859|dj=0858.060|hdz=21497.050|uh=662F|ud=26159|bh=AC4F|bd=44111}}
