--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -107,7 +107,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|green plum}} (''[[Prunus mume]]'')
 * {{vern|greengage plum}} ({{taxlink|Prunus italica|species|ver=181106}}, syn. {{taxlink|Prunus domestica subsp. italica|subspecies|ver=181106}})
 * {{vern|ground plum}} (''[[Astragalus]]'' spp., especially {{taxlink|Astragalus caryocarpus|species|ver=181106}})
-* [[hog plum]], {{vern|hogplum}} (''[[Spondias]]'' spp., {{taxlink|Metopium toxiferum|species|ver=181106}}, ''[[Prunus angustifolia]]'', {{taxlink|Ximenia americana|species|ver=181106}})
+* [[hog plum]], [[hogplum]] (''[[Spondias]]'' spp., {{taxlink|Metopium toxiferum|species|ver=181106}}, ''[[Prunus angustifolia]]'', {{taxlink|Ximenia americana|species|ver=181106}})
 * {{vern|horse plum}} ({{taxlink|Prunus americana|species|ver=181106}}, {{taxlink|Prunus nigra|species|ver=181106}})
 * {{vern|leaf-curling plum aphid}}
 {{rel-mid4}}
