--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -188,6 +188,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 * Norwegian: {{t|no|suge}}
 * Occitan: {{t+|oc|chucar}}
 * Old English: {{t|ang|sūcan}}, {{t|ang|sūgan}}
+* Ossetian: {{t|os|дӕйын}}
 * Ottoman Turkish: {{t|ota|اممك|tr=emmek}}
 * Pashto: {{t+|ps|زبېښل|tr=zbeӽᶕl}}, {{t+|ps|شپېلل|tr=šрelǝ́l}}
 * Persian: {{t+|fa|مکیدن|tr=makidan}}
