/* Translations */ re-order Spanish equivalents based on frequency <cost#63469556>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -270,7 +270,7 @@ From {{inh|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen|t=to cost}}, from
 * Serbo-Croatian: {{t+|sh|trošak|m}}
 * Slovak: {{t|sk|náklad|m}}
 * Slovene: {{t|sl|stroški|p}}
-* Spanish: {{t+|es|costa|f}}, {{t+|es|gasto|m}}, {{t+|es|costo|m}}
+* Spanish: {{t+|es|costo|m}}, {{t+|es|gasto|m}}, {{t+|es|costa|f}}
 * Swahili: {{t+|sw|gharama}}
 * Swedish: {{t+|sv|kostnad|c}}
 * Tagalog: {{t+|tl|halaga}}
