--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -29,18 +29,18 @@ From {{inh|zh|sit-pro|*ʔak||bad}}; cognate with {{cog|bo|ཨག་པོ||bad}}
 |m=è
 |m-s=ngo2
 |c=ok3
-|c-t=
-|g=
-|h=pfs=ok
+|c-t=ok2
+|g=ngoh6
+|h=pfs=ok;gd=og5
 |j=ghah4
 |mb=ŏ̤
 |md=áuk
-|mn=ok/ml,tp,tn,kh,tc,hc,lk,sx,yl,km,mg,sg:oh
+|mn=ml,jj,tw:ok/ml,jj,tp,tn,kh,tc,hc,lk,sx,yl,km,mg,sg:oh
 |mn_note=ok - literary; oh - vernacular (“difficult; slow”, usually written as {{zh-l|僫}})
 |mn-t=ag4/oh4
 |mn-t_note=ag4 - literary; oh4 - vernacular (“difficult”)
 |w=4oq
-|x=
+|x=o6
 |mc=3
 |oc=1,3
 |cat=a
