[[wikt:User:Suzukaze-c/AjaxEdit.js|Æ]] /* 2 Chinese */ <惡#63472973>

--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -21,7 +21,7 @@
 {{Han compound|亞|心|ls=psc|c1=p|c2=s|t2=heart}}.
 
 ===Etymology 1===
-{{zh-forms|s=恶|alt=僫,悪,𢛫,𢝏,䜑}}
+{{zh-forms|s=恶|alt=僫,悪,𢛫,𢝏,䜑,䛩}}
 From {{inh|zh|sit-pro|*ʔak||bad}}; cognate with {{cog|bo|ཨག་པོ||bad}} ({{zh-ref|Coblin, 1986}}; {{zh-ref|Schuessler, 2007}}). Also related to {{cog|th|ยาก|t=difficult}} ({{zh-ref|Schuessler, 2007}}).
 
 ====Pronunciation====
@@ -73,7 +73,7 @@ From {{inh|zh|sit-pro|*ʔak||bad}}; cognate with {{cog|bo|ཨག་པོ||bad}}
 {{CJKV||s=悪|あく|악|ác}}
 
 ===Etymology 2===
-{{zh-forms|s=恶|alt=僫,悪,𢛫,𢝏,䜑}}
+{{zh-forms|s=恶|alt=僫,悪,𢛫,𢝏,䜑,䛩}}
 [[exoactive|Exoactive]] of etymology 1 ({{zh-ref|Schuessler, 2007}}).
 
 ====Pronunciation====
@@ -104,7 +104,7 @@ From {{inh|zh|sit-pro|*ʔak||bad}}; cognate with {{cog|bo|ཨག་པོ||bad}}
 {{zh-der|fold=1|惡濕居下|交惡|善善惡惡|愛遠惡近|好善惡惡|惡醉強酒|惡紫奪朱|惡直醜正|惡惡從短|惡惡|厭惡|好生惡殺|惡嫌|嫌好道惡|好諛惡直|好惡|可惡|好逸惡勞|痛惡|憎惡|深惡痛嫉|深惡痛絕|畏影惡跡|戀生惡死|欣生惡死|羞惡|貪生惡死}}
 
 ===Etymology 3===
-{{zh-forms|s=恶|alt=僫,悪,𢛫,𢝏,䜑}}
+{{zh-forms|s=恶|alt=僫,悪,𢛫,𢝏,䜑,䛩}}
 Cognate with {{och-l|安|where; how}}, {{och-l|焉|where; how|id=3}}.
 
 ====Pronunciation====
