--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -21,9 +21,9 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 
 ====Synonyms====
 * {{l|en|Aotearoa}}
-* {{l|en|Aotearoa New Zealand}}
 * {{l|en|Manawa}}
 * {{l|en|Enzed}}
+* {{l|en|Kiwiana}}
 * {{l|en|Godzone}} {{q|New Zealand|informal}}
 * {{l|en|Kiwiland}}
 * {{l|en|Nu Zillund}} {{q|humorous}}
