--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -40,6 +40,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 {{top2}}
 * {{l|en|Enzedder}}
 * {{l|en|New Zealander}}
+* {{l|en|Kiwianan}}
 * {{l|en|Manawanian}}
 * {{l|en|New Zealand English}}
 * {{l|en|New Zealand flax}}
