Reverted edits by [[Special:Contributions/122.62.224.70|122.62.224.70]]. If you think this rollback is in error, please leave a message on my talk page. <New Zealand#63479588>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -21,9 +21,9 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 
 ====Synonyms====
 * {{l|en|Aotearoa}}
+* {{l|en|Aotearoa New Zealand}}
 * {{l|en|Manawa}}
 * {{l|en|Enzed}}
-* {{l|en|Kiwiana}}
 * {{l|en|Godzone}} {{q|New Zealand|informal}}
 * {{l|en|Kiwiland}}
 * {{l|en|Nu Zillund}} {{q|humorous}}
@@ -40,7 +40,6 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 {{top2}}
 * {{l|en|Enzedder}}
 * {{l|en|New Zealander}}
-* {{l|en|Kiwianan}}
 * {{l|en|Manawanian}}
 * {{l|en|New Zealand English}}
 * {{l|en|New Zealand flax}}
