/* Chinese */ // Edit via Wikiplus <坼#63491702>

--- a/en/坼/坼.13055.wikitext
+++ b/en/坼/坼.13055.wikitext
@@ -17,6 +17,7 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|图|斥|ls=psc|c1=s|c2=p|t1=hand}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -30,10 +31,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# to [[crack]]; to [[break]] open
-# to [[sprout]]; to [[blossom]]
+# {{zh-o}} to [[crack]]; to [[break]] open
+# {{zh-o}} to [[sprout]]; to [[blossom]]
 
-====Compounds====
+===Compounds===
 {{zh-der|天崩地坼|地坼天崩|剖心坼肝|龜坼|坼副|坼裂|坼兆|山崩地坼}}
 
 ----
