/* Chinese */Create entry as variant character <愑#63496348>

--- a/en/愑/愑.15653.wikitext
+++ b/en/愑/愑.15653.wikitext
@@ -10,25 +10,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=yǒng
-|c=jung5
-|mc=
-|oc=
-|ma=
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|zh}}
-
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+{{zh-see|悀|v}}
 
 ----
 
