--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -37,7 +37,7 @@
 |j_note=xing1 - literary; xi1 - vernacular (limited, e.g. {{l|zh|星宿}})
 |mb=sáing
 |md=sĭng
-|mn=xm,qz,lk,sx,tp,km,mg,hc,sg:chhiⁿ/zz,yl,tn,kh,tc,sg,pn:chheⁿ/san/seng
+|mn=xm,qz,jj,lk,sx,tp,km,mg,hc,sg:chhiⁿ/zz,yl,tn,kh,tc,sg,pn:chheⁿ/san/ml,jj,tw:seng
 |mn_note=chhiⁿ/chheⁿ - vernacular; san - vernacular (limited, e.g. {{l|zh|零星}}); seng - literary
 |mn-t=cên1
 |w=1xin
