--- a/en/偄/偄.11090.wikitext
+++ b/en/偄/偄.11090.wikitext
@@ -51,7 +51,7 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[だん]] (dan), [[なん]] (nan)|kun=[[よわい]] (yowai)}}
+* {{ja-readings|on=だん,なん|kun=よわい}}
 
 ----
 
