--- a/en/偍/偍.11101.wikitext
+++ b/en/偍/偍.11101.wikitext
@@ -39,4 +39,4 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[てい]] (tei), [[だい]] (dai)|kun=[[ゆるやか]] (yuruyaka)}}
+* {{ja-readings|on=てい,だい|kun=ゆるやか}}
