--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -395,6 +395,8 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * {{l|de|Israelit}}
 * {{l|de|israelitisch}}
 
+{{C|de|Israel}}
+
 ----
 
 ==Indonesian==
