--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -49,9 +49,7 @@ There is also an occasional weak form ''kəm''. See [[c’mon]].
 # {{lb|en|intransitive}} To [[arrive]].
 #* ''' 1667''' Diary of {{w|Samuel Pepys}} (illustrating the [[present historic]])
 #*: Late at night '''comes''' Mr. Hudson, the cooper, my neighbour, and tells me that he '''come''' from Chatham this evening at five o'clock, and saw this afternoon "The Royal James," "Oake," and "London," burnt by the enemy with their fire-ships:
-#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
-|title={{w|The Celebrity}}|chapter=5
-|passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
+#* {{RQ:Churchill Celebrity|chapter=5|passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
 #* {{quote-book|en|date=11 January 2013|origdate=1997|author=David Bell|author2=Gill Valentine|publisher=Routledge|title=Consuming Geographies: We Are Where We Eat|isbn=9781442432949|page=140|url=https://books.google.co.nz/books?id=cM70Uhk0r88C|passage=So I'd have ate when me Dad had ate, sort of thing, I think, you know when he '''come''' home from work, I'd have waited for him, I wouldn't have said I wanted mine at four o'clock{{...}}}}
 # {{lb|en|intransitive}} To [[appear]], to [[manifest]] itself.
 #: {{ux|en|The pain in his leg '''comes''' and goes.}}
