--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -36,7 +36,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 ## {{lb|en|intransitive|copulative}} To experience an emotion or other mental state.
 ##: {{ux|en|He obviously '''feels''' strongly about it.}}
 ##: {{ux|en|She '''felt''' even more upset when she heard the details.}}
-##* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}| title={{w|The Celebrity}}| chapter=5| passage=Then we relapsed into a discomfited silence, and wished we were anywhere else. But Miss Thorn relieved the situation by laughing aloud, and with such a hearty enjoyment that instead of getting angry and more mortified we began to laugh ourselves, and instantly '''felt''' better.}}
+##* {{RQ:Churchill Celebrity|chapter=5|passage=Then we relapsed into a discomfited silence, and wished we were anywhere else. But Miss Thorn relieved the situation by laughing aloud, and with such a hearty enjoyment that instead of getting angry and more mortified we began to laugh ourselves, and instantly '''felt''' better.}}
 ## {{lb|en|intransitive}} To [[sympathise]]; to have the sensibilities moved or affected.
 ##: {{ux|en|I '''feel''' for you and your plight.}}
 ##* {{RQ:Burke Reflections}}
