Move to template (semi-automated) <find#63509942>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -21,7 +21,7 @@ From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gmw-pro|*f
 #*: Among the Woods and Forests thou art '''found'''.
 # {{lb|en|transitive}} To [[encounter]] or [[discover]] something being [[search]]ed for; to [[locate]].
 #: {{ux|en|I '''found''' my car keys. They were under the couch.}}
-#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}|title={{w|The Celebrity}}|chapter=2|passage=I had occasion to make a somewhat long business trip to Chicago, and on my return […] I '''found''' Farrar awaiting me in the railway station. He smiled his wonted fraction by way of greeting, and finally leading me to his buggy, turned and drove out of town.}}
+#* {{RQ:Churchill Celebrity|chapter=2|passage=I had occasion to make a somewhat long business trip to Chicago, and on my return […] I '''found''' Farrar awaiting me in the railway station. He smiled his wonted fraction by way of greeting, and finally leading me to his buggy, turned and drove out of town.}}
 #* {{quote-book|en|year=1918|author={{w|W. B. Maxwell}}|chapter=10|title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]|passage=
 It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
 #* {{quote-journal|en|date=January 25, 2011|author=Paul Fletcher|work=BBC|title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]|passage=
