--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -71,9 +71,7 @@ There is also an occasional weak form ''kəm''. See [[c’mon]].
 # {{lb|en|copulative|figuratively|with ''close''}} To [[approach]] a state of being or accomplishment.
 #: {{ux|en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
 #: {{ux|en|One of the screws '''came''' loose, and the skateboard fell apart.}}
-#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
-|title={{w|The Celebrity}}|chapter=3
-|passage=Now all this was very fine, but not at all in keeping with the Celebrity's character as I had '''come''' to conceive it. The idea that adulation ever cloyed on him was ludicrous in itself. In fact I thought the whole story fishy, and '''came''' very near to saying so.}}
+#* {{RQ:Churchill Celebrity|chapter=3|passage=Now all this was very fine, but not at all in keeping with the Celebrity's character as I had '''come''' to conceive it. The idea that adulation ever cloyed on him was ludicrous in itself. In fact I thought the whole story fishy, and '''came''' very near to saying so.}}
 # {{lb|en|figuratively|with ''to''}} To take a particular [[approach]] or [[point of view]] in regard to something.
 #: {{ux|en|He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.}}
 # {{lb|en|copulative|[[Appendix:Glossary#fossil_word|fossil word]]}} To [[become]], to [[turn out]] to be.
