--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -138,7 +138,7 @@ Cognate with {{och-l|安|where; how}}, {{och-l|焉|where; how|id=3}}.
 
 ===Etymology 5===
 {{zh-forms|s=恶|alt=污,屙,涴}}
-Probably related to etymologies 1 and 2 ({{zh-ref|Zhengzhang, 2011}}; {{zh-ref|Xiang, 2019}}). Alternatively, {{ltc-l|涴|to soil; to stain}} has been proposed to be the etymon ({{zh-ref|Cao, 2008}}).
+Probably related to etymologies 1 and 2 ({{zh-ref|Zhengzhang, 2011b}}; {{zh-ref|Xiang, 2019}}). Alternatively, {{ltc-l|涴|to soil; to stain}} has been proposed to be the etymon ({{zh-ref|Cao, 2008}}).
 
 ====Pronunciation====
 {{zh-pron
