--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -96,7 +96,7 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Thai: {{t-needed|th}}
 * Turkish: {{t+|tr|kıvrım}}
 * Vietnamese: {{t-needed|vi}}
-* Yiddish: {{t|yi|אױסבײג|m}}
+* Yiddish: {{t|yi|אויסבייג|m}}
 {{trans-bottom}}
 
 {{trans-top|curved line}}
