t+lez:[[хел]] ([[WT:EDIT|Assisted]]) <branch#63600385>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -126,6 +126,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Latgalian: {{t|ltg|zors|m}}
 * Latin: {{t|la|rāmus|m}}, {{t|la|sūrus|m}}, {{t|la|termes|m}}
 * Latvian: {{t|lv|zars|m}}
+* Lezgi: {{t|lez|хел}}
 * Lithuanian: {{t+|lt|šaka|f}}
 * Low German: {{t|nds|Telg|m}}
 * Luxembourgish: {{t+|lb|Aascht}}
