/* Derived terms */ <come#63607710>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -137,6 +137,7 @@ In older forms of English, when the pronoun ''[[thou]]'' was in active use, and 
 |come at
 |come back
 |come by
+|Come By Chance
 |come clean
 |come correct
 |comedown
