--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -129,6 +129,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Newby Bridge
 |Newnham Bridge
 |Norton Bridge
+|Park Bridge
 |Pooley Bridge
 |Pye Bridge
 |[[Roybridge]], [[Roy Bridge]]
