t+es:[[hétero]] t+es:[[heterosexual]] ([[WT:EDIT|Assisted]]) <straight#63612872>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -359,7 +359,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Portuguese: {{t|pt|hétero}}
 * Russian: {{qualifier|slang, noun}} {{t+|ru|натура́л|m}}, {{qualifier|literally, noun is used}} {{t+|ru|гетеросексуа́л|m|tr=getɛrosɛksuál}}
 * Slovak: {{t+|sk|heterosexuálny}}
-* Spanish: {{t|es|hetero}}
+* Spanish: {{t|es|hetero}}, {{t|es|hétero}}, {{t+|es|heterosexual}}
 * Swedish: {{t+|sv|heterosexuell}}, {{t+|sv|strejt}} {{qualifier|colloquial}}, {{t+|sv|hetero}}
 * Ukrainian: {{t|uk|натура́л}}, {{t|uk|гетеросексуа́л}}
 {{trans-bottom}}
