--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -22,7 +22,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 ====Synonyms====
 * {{l|en|Aotearoa}}
 * {{l|en|Aotearoa New Zealand}}
-* {{l|en|Whenua}}
+* {{l|en|Manawa}}
 * {{l|en|Enzed}}
 * {{l|en|Godzone}} {{q|New Zealand|informal}}
 * {{l|en|Kiwiland}}
@@ -40,13 +40,15 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 {{top2}}
 * {{l|en|Enzedder}}
 * {{l|en|New Zealander}}
-* {{l|en|Whenuan}}
+* {{l|en|Manawanian}}
+* {{l|en|New Zealand English}}
 * {{l|en|New Zealand flax}}
 * {{l|en|Zealandian}}
 * {{l|en|New Zealandic}}
 * {{l|en|New Zealandress}}
 * {{l|en|New Zealand tea tree}}
 * {{l|en|Zealandia}}
+* {{l|en|Zeelandia}}
 * {{l|en|Zealandica}}
 {{bottom}}
 
