--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -19,6 +19,8 @@
 {{Han etym}}
 {{Han compound|亻|𤰈|ls=psc|c1=s|c2=p}}.
 
+Originally a {{Han compound|亻|箙|ls=psc|c1=s|c2=p|nocap=y}}.
+
 ===Etymology===
 Area word; compare {{cog|my|ပြင်||to get ready; to prepare}}, {{cog|kac|hpra|tr=pʰraʔ³¹|t=to complete}}, {{cog|mnw|ပြေၚ်||to prepare; to arrange for}} ({{zh-ref|Schuessler, 2007}}).
 
