--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -116,7 +116,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Irish: {{t|ga|íocón|m}}
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t|ja|聖像|tr=せいぞう, seizō}}, {{t|ja|イコン|tr=ikon}}
-* Kazakh: {{t|kk|икон}}, {{t|kk|икона}}
+* Kazakh: {{t|kk|икон}}
 * Khmer: {{t|km|រូបតំណាង}}
 * Korean: {{t|ko|이콘}}, {{t|ko|성상}}, {{t|ko|성화}}
 * Kurdish:
