--- a/en/倪/倪.11045.wikitext
+++ b/en/倪/倪.11045.wikitext
@@ -21,11 +21,11 @@
 |m=ní
 |c=ngai4
 |h=pfs=ngà
-|md=
+|md=ngà̤
 |mn=gê
 |mn-t=ngi5/ghoi5
 |mn-t_note=ghoi5 - surname
-|w=
+|w=3nyi
 |mc=y
 |oc=y
 |cat=n,a,v,w:pron,pn
@@ -39,7 +39,6 @@
 # {{†}} [[origin]]; [[beginning]]
 # {{†}} [[bound]]; [[limit]]; [[extremity]]
 # {{†}} to [[differentiate]]
-# {{lb|zh|Wu}} [[I]]; [[we]]
 # {{surname|zh}}
 
 ====Compounds====
