t+av:[[кӏалъазе]] ([[WT:EDIT|Assisted]]) <speak#63678597>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -134,7 +134,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
 * Assamese: {{t|as|কথা কোৱা}}, {{t|as|কোৱা}}
 * Asturian: {{t+|ast|falar}}
-* Avar: {{t-needed|av}}
+* Avar: {{t|av|кӏалъазе}}
 * Azerbaijani: {{t+|az|danışmaq}}
 * Bashkir: {{t|ba|һөйләшеү|sc=Cyrl}}
 * Basque: {{t|eu|berba egin}}
