--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -24,7 +24,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #*: I do not like crooked, twisted, blasted trees. I admire them much more if they are tall, '''straight''' and flourishing.
 #* {{RQ:Chmbrs YngrSt|IX}}
 #*: “Heavens!” exclaimed Nina, “the blue-stocking and the fogy!—and yours ''are'' pale blue, Eileen!—you’re about as self-conscious as Drina—slumping there with your hair tumbling ''à la'' Mérode! Oh, it's very picturesque, of course, but a '''straight''' spine and good grooming is better.{{nb...}}”
-#* '''2011''', Adharanand Finn, ''{{w|The Guardian}}'', 22 March:
+#* '''2011''' March 22, Adharanand Finn, ''{{w|The Guardian}}'':
 #*: The other people, I presume, are supposed to be standing to attention, but they're all smiling at me. The lines are not even '''straight'''.
 # {{lb|en|of a path, trajectory, etc.}} [[direct|Direct]], [[undeviating]]. {{defdate|from 15<sup>th</sup>c.}}
 #* '''1913''', {{w|John Fox, Jr.}}, ''The Kentuckians'', page 185:
