--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -281,6 +281,9 @@ From {{inh|nl|dum|blont}}, from {{der|nl|fro|blond}}, {{der|nl|ML.|blondus}}, fr
 ====Inflection====
 {{nl-decl-adj}}
 
+====Descendants====
+* {{desc|pap|blònt|bor=1}}
+
 ====Related terms====
 * {{l|nl|blondine}}
 
