t+ce:[[зайтун]] ([[WT:EDIT|Assisted]]) <olive#63694697>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -58,6 +58,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Bulgarian: {{t|bg|масли́на|f|sc=Cyrl}}
 * Burmese: {{t+|my|သံလွင်|sc=Mymr}}
 * Catalan: {{t+|ca|oliva|f}}
+* Chechen: {{t|ce|зайтун}}
 * Chinese:
 *: Cantonese: {{t|yue|橄欖|sc=Hani}}, {{t|yue|橄榄|tr=gaam3 laam5-2|sc=Hani}}
 *: Mandarin: {{t+|cmn|橄欖}}, {{t+|cmn|橄榄|tr=gǎnlǎn}}
