--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -77,6 +77,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Avonbridge
 |Bailey bridge
 |Bamber Bridge
+|Beitbridge
 |Blythe Bridge
 |bowstring bridge
 |[[Bridge End]], [[Bridgend]]
