/* Kanji */ Added compounds <傍#63733735>

--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -89,6 +89,24 @@
 |kun=かたわ-ら, そば-, そ-う
 }}
 
+====Compounds====
+{{der-top|Compounds}}
+* {{ja-r|海%馬%傍%回|かい%ば%ぼう%かい|gloss=[[parahippocampal gyrus]]}}
+* {{ja-r|近%傍|きん%ぼう|gloss=[[vicinity]], [[proximity]]}}
+* {{ja-r|傍%観|ぼう%かん|gloss=[[onlooking]], [[look on]]}}
+* {{ja-r|傍%観%者|ぼう%かん%しゃ|gloss=[[onlooker]]}}
+* {{ja-r|傍%心|ぼう%しん|gloss=[[excenter]]}}
+* {{ja-r|傍%若%無%人|ぼう%じゃく%ぶ%じん|gloss=[[arrogant]], [[insolent]], [[impudent]]}}
+* {{ja-r|傍%受|ぼう%じゅ|gloss=[[interception]], [[tapping]]}}
+* {{ja-r|傍%接%円|ぼう%せつ%えん|gloss=[[excircle]]}}
+* {{ja-r|傍%線|ぼう%せん|gloss={{lb|ja|typography}} [[sideline]]; vertical equivalent of the [[underline]]}}
+* {{ja-r|傍%点|ぼう%てん|gloss=[[w:Emphasis point|emphasis point]]}}
+* {{ja-r|傍%尿%道%腺|ぼう%にょう%どう%せん|gloss=[[Skene's gland]]}}
+* {{ja-r|路%傍|ろ%ぼう|gloss=[[roadside]]}}
+* {{ja-r|傍%迷%惑|はた%-めい%わく|gloss=[[nuisance]] to one's surroundings}}
+* {{ja-r|傍ら|かたわら|[[in addition]], [[besides]]}}
+{{der-bottom}}
+
 ===Etymology===
 {{ja-kanjitab|そば|yomi=k}}
 
