#* '''2008''', John I. Carney, ''Soapstone'' (page 74) #*: “In that case,” said Jeff, “I just thought of something else we need.” He walked over to one of the stations that was selling household goods and bought a can opener.<br>“Nice '''catch''',” said Lucy. <catch#63734104>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -25,6 +25,8 @@ The verb became irregular, possibly under the influence of the semantically simi
 #: ''Nice '''catch'''!''
 # {{lb|en|countable}} The act of noticing, [[understand]]ing or hearing.
 #: ''Good '''catch'''. I never would have remembered that.''
+#* '''2008''', John I. Carney, ''Soapstone'' (page 74)
+#*: “In that case,” said Jeff, “I just thought of something else we need.” He walked over to one of the stations that was selling household goods and bought a can opener.<br>“Nice '''catch''',” said Lucy.
 # {{lb|en|uncountable}} The game of catching a ball.
 #: ''The kids love to play '''catch'''.''
 # {{lb|en|countable}} Something which is captured or caught.
