t+inh:[[лархӏа]] ([[WT:EDIT|Assisted]]) <count#63738053>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -90,6 +90,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Icelandic: {{t+|is|telja}}
 * Ido: {{t+|io|kontar}}
 * Indonesian: {{t+|id|menghitung}}, {{t+|id|hitung}}
+* Ingush: {{t|inh|лархӏа}}
 * Irish: {{t|ga|ríomh}}, {{t|ga|áirigh}}, {{t|ga|comhair}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t+|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
