t+pl:[[kiecka]] ([[WT:EDIT|Assisted]]) <skirt#63739833>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -177,7 +177,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 * Papiamentu: {{t|pap|saya}}
 * Persian: {{t+|fa|دامن|tr=dâman|sc=fa-Arab}}
 * Plautdietsch: {{t|pdt|Rock|m}}
-* Polish: {{t+|pl|spódnica|f}}
+* Polish: {{t+|pl|spódnica|f}}, {{t+|pl|kiecka|f}}
 * Portuguese: {{t+|pt|saia|f}}
 * Romani: {{t|rom|rotya|f}}
 * Romanian: {{t+|ro|fustă|f}}, {{t+|ro|pulpană|f}}
