t+ce:[[харжа]] ([[WT:EDIT|Assisted]]) <choose#63743718>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -61,6 +61,7 @@ Cognate with {{cog|sco|chose}}, {{m|sco|chese||to choose}}, {{cog|fr|choisir||to
 * Bulgarian: {{t+|bg|подби́рам|impf}}
 * Burmese: {{t+|my|ရွေး|sc=Mymr}}
 * Catalan: {{t+|ca|triar}}, {{t+|ca|escollir}}, {{t+|ca|elegir}}
+* Chechen: {{t|ce|харжа}}
 * Chinese:
 *: Cantonese: {{t|yue|揀|sc=Hani}}, {{t|yue|拣|tr=gaan2|sc=Hani}}, {{t|yue|選擇|tr=syun2 zaak6|sc=Hani}}
 *: Mandarin: {{t+|cmn|選擇|sc=Hani}}, {{t+|cmn|选择|tr=xuǎnzé|sc=Hani}}, {{t+|cmn|挑選|sc=Hani}}, {{t+|cmn|挑选|tr=tiāoxuǎn|sc=Hani}}
